Java 11 support
Update maven-master & dependency versions.
Migrate code to support Java 11.

Change-Id: I8e2140d81eb7cc99b1bfaeeeb7b04aa531891a1b
Reviewed-on: https://git.eclipse.org/r/134537
Tested-by: CI Bot
Reviewed-by: Matthias Villiger <mvi@bsi-software.com>