@@ -727,7 +727,7 @@ public abstract class AbstractBookmarkTreeField extends AbstractTreeField {
         IBookmarkForm form = null;
         if (getConfiguredBookmarkForm() != null) {
           try {
-            form = getConfiguredBookmarkForm().newInstance();
+            form = getConfiguredBookmarkForm().getConstructor().newInstance();
           }
           catch (Exception e) {
             BEANS.get(ExceptionHandler.class).handle(new ProcessingException("error creating instance of class '" + getConfiguredBookmarkForm().getName() + "'.", e));
