@@ -230,7 +230,7 @@ public class BookmarkViewForm extends AbstractForm {
               IBookmarkForm form = null;
               if (getConfiguredBookmarkForm() != null) {
                 try {
-                  form = getConfiguredBookmarkForm().newInstance();
+                  form = getConfiguredBookmarkForm().getConstructor().newInstance();
                 }
                 catch (Exception e) {
                   BEANS.get(ExceptionHandler.class).handle(new ProcessingException("error creating instance of class '" + getConfiguredBookmarkForm().getName() + "'.", e));
