@@ -122,7 +122,7 @@ public abstract class AbstractFormMenu<FORM extends IForm> extends AbstractMenu 
       return null;
     }
     try {
-      return getConfiguredForm().newInstance();
+      return getConfiguredForm().getConstructor().newInstance();
     }
     catch (Exception e) {
       BEANS.get(ExceptionHandler.class).handle(new ProcessingException("error creating instance of class '" + getConfiguredForm().getName() + "'.", e));
